--- a/platform_code/home/templates/home/login.html
+++ b/platform_code/home/templates/home/login.html
@@ -34,7 +34,7 @@
         {% endif %}
         <div class="body margin-50 ">
             {% csrf_token %}
-            <table>
+            <table class="margin-auto">
               <tr >
                 <td class="margin-50">{{ login_form.username.label_tag }}</td>
               </tr>
