--- a/platform_code/assessment/static/css/element-card.css
+++ b/platform_code/assessment/static/css/element-card.css
@@ -227,6 +227,7 @@ div.evaluation-title: h3 {
   overflow: hidden;
   height: 3em;
   text-overflow: ellipsis;
+  display: -webkit-inline-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
