--- a/platform_code/assessment/templates/assessment/results.html
+++ b/platform_code/assessment/templates/assessment/results.html
@@ -61,8 +61,9 @@
 <!--      </div>-->
 
     <div class="margin-70 margin-bot-50">
-        <p class="">{% trans "The synthetic score is on a total of 100 theoretical maximum points. It provides an indication of the organization maturity level concerning a responsible and trustworthy data science. At the end of 2020, the 50/100 threshold can be considered a very advanced maturity level." %}
+        <p class="">{% trans "The synthetic score is on a total of 100 theoretical maximum points for your full assessment. It provides an indication of the organization maturity level concerning a responsible and trustworthy data science. At the end of 2020, the 50/100 threshold can be considered a very advanced maturity level." %}
         </p>
+        <p class="">{% trans "The mechanism for calculating the score is described in the FAQ that you can consult " %}<a href="{% url 'home:faq' %}" title="{% trans 'FAQ' %}">{% trans "here." %}</a></p>
         <p class="">{% trans "Note: the score is a synthetic indication, not an end in itself. In particular, we invite you to consult the resources associated with each assessment element, which are excellent entry points for building skills on your topics of interest." %}
         </p>
     </div>
