Update logo & rename

--- a/platform_code/templates/base-evaluation.html
+++ b/platform_code/templates/base-evaluation.html
@@ -35,7 +35,7 @@
         <nav class="navbar navbar-expand-lg  is-fixed-top" >
         <div class="container">
           <a class="navbar-brand" title="home" href="{% url 'home:homepage' %}" style="color: #FFF;">
-              <img class="logo-navbar" src="{% static 'image/Substra Foundation_Logo horizontal_fond.png' %}">
+              <img class="logo-navbar" src="{% static 'image/Substra_Foundation_Logo_horizontal_fond.png' %}">
           </a>
           <button class="navbar-toggler icon-navbar" type="button" data-toggle="collapse"
                   data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
