Update front text

--- a/platform_code/home/templates/home/about.html
+++ b/platform_code/home/templates/home/about.html
@@ -4,7 +4,8 @@
 {% load i18n %}
 
 {% block content %}
-<!-- TODO be sure there is an english version somewhere for this page ! -->
+
+<!--TODO not used for now, if it won't be later, to delete-->
 
 <h1>A propos de Substra Foundation</h1>
 
